--- a/stay-orgainised/package.json
+++ b/stay-orgainised/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.26.4",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
